--- a/src/layout/mensagem.module.css
+++ b/src/layout/mensagem.module.css
@@ -1,12 +1,18 @@
 .mensagem {
-    width: 100%;
+    width: 35%;
     padding: 1em;
     border: 1px solid #000;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 2em;
     border-radius: 5px;
+    font-size: 2rem;
+    font-weight: bold;
+    border-radius: 20px;
+    background-color: #e4c66b;
+    margin-top: 10%;
   }
+
   
   .success {
     color: #155724;
