--- a/src/layout/mensagem.module.css
+++ b/src/layout/mensagem.module.css
@@ -9,7 +9,7 @@
     font-size: 2rem;
     font-weight: bold;
     border-radius: 20px;
-    background-color: #e4c66b;
+    background-color: #e6ad126e;
     margin-top: 10%;
   }
 
